WIP Modularize binding extension
Now we have a generic binding extension and binding providers, like
QmlBindingProvider and QuickImplicitBindingDependencyProvider.
Refreshing bindings does not yet work as intended.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -422,6 +422,7 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD AND Qt5Core_FOUND AND NOT Qt5Core_VERSION_MINO
             ../probe/hooks.cpp
             ${CMAKE_SOURCE_DIR}/plugins/qmlsupport/qmlbindingmodel.cpp
             ${CMAKE_SOURCE_DIR}/plugins/qmlsupport/qmlbindingnode.cpp
+            ${CMAKE_SOURCE_DIR}/plugins/qmlsupport/qmlbindingextension.cpp
             $<TARGET_OBJECTS:modeltestobj>
         )
         target_include_directories(bindinginspectortest SYSTEM PRIVATE ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
