Add unit test for image and DF texture grabbing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -425,6 +425,15 @@ add_executable(quickinspectortest ${quickinspectortest_srcs})
 target_include_directories(quickinspectortest SYSTEM PRIVATE ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
 target_link_libraries(quickinspectortest gammaray_core Qt5::Test Qt5::Quick)
 add_test(NAME quickinspectortest COMMAND quickinspectortest)
+
+set(quicktexturetest_srcs
+    quicktexturetest.cpp
+    $<TARGET_OBJECTS:gammaray_probe_obj>
+)
+qt4_add_resources(quicktexturetest_srcs quickinspectortest.qrc)
+add_executable(quicktexturetest ${quicktexturetest_srcs})
+target_link_libraries(quicktexturetest gammaray_core Qt5::Test Qt5::Quick)
+add_test(NAME quicktexturetest COMMAND quicktexturetest)
 endif()
 
 ### ToolManager test
