Make the material shader model a bit more flexible
It's now no longer limited to file-backed shaders, also enabling access
to dynamic ones from QQuickShaderEffect for example.

--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -49,6 +49,7 @@ if(Qt5Quick_FOUND AND HAVE_PRIVATE_Qt5Quick_HEADERS AND NOT ${Qt5Quick_VERSION} 
     quickpaintanalyzerextension.cpp
     quickoverlay.cpp
     materialextension/materialextension.cpp
+    materialextension/materialshadermodel.cpp
     geometryextension/sggeometryextension.cpp
     geometryextension/sggeometrymodel.cpp
     textureextension/textureextension.cpp
