Implement access to shader effect uniform data

--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -50,6 +50,7 @@ if(Qt5Quick_FOUND AND HAVE_PRIVATE_Qt5Quick_HEADERS AND NOT ${Qt5Quick_VERSION} 
     quickoverlay.cpp
     materialextension/materialextension.cpp
     materialextension/materialshadermodel.cpp
+    materialextension/qquickopenglshadereffectmaterialadaptor.cpp
     geometryextension/sggeometryextension.cpp
     geometryextension/sggeometrymodel.cpp
     textureextension/textureextension.cpp
