Generate 7z archives instead of nsis

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -28,6 +28,7 @@ ShortPath/emerge_use_short_path = False
 Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
 Packager/RepositoryUrl=http://downloads.kdab.com/kde-emerge/
+Packager/PackageType = SevenZipPackager
 Compile/BuildType=Release
 ContinuousIntegration/Enabled=True
 QtSDK/Version=5.9
