Don't use ninja on apveyor

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -29,7 +29,9 @@ Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
 Packager/RepositoryUrl=http://downloads.kdab.com/kde-emerge/
 Packager/PackageType = SevenZipPackager
-Compile/BuildType=Release
+Compile/BuildType = Release
+#we need https://github.com/ninja-build/ninja/pull/1181/ so ninja > v1.7.2
+Compile/UseNinja = False
 ContinuousIntegration/Enabled=True
 QtSDK/Version=5.9
 QtSDK/Path=C:\Qt
