--- a/appveyor.ini
+++ b/appveyor.ini
@@ -27,8 +27,8 @@ Paths/Msys = ${Variables:Msys}
 ShortPath/emerge_use_short_path = False
 Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
-Packager/RepositoryUrl=http://downloads.kdab.com/kde-emerge/
-Packager/PackageType = SevenZipPackager
+Packager/RepositoryUrl = http://downloads.kdab.com/kde-emerge/
+Packager/PackageType = PortablePackager
 Compile/BuildType = Release
 #we need https://github.com/ninja-build/ninja/pull/1181/ so ninja > v1.7.2
 Compile/UseNinja = False
