Prefer target_include_directories over include_directories
This also isolates the usage of private headers a bit better.

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -89,11 +89,7 @@ set_target_properties(gammaray_ui PROPERTIES
 gammaray_target_relocatable_interfaces(gammaray_ui_ipaths)
 target_include_directories(gammaray_ui PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}> $<INSTALL_INTERFACE:${gammaray_ui_ipaths}>)
 if(HAVE_PRIVATE_QT_HEADERS)
-  if(Qt5Widgets_FOUND)
-    include_directories(SYSTEM ${Qt5Widgets_PRIVATE_INCLUDE_DIRS})
-  elseif(QtGui_FOUND)
-    include_directories(SYSTEM ${QtGui_PRIVATE_INCLUDE_DIRS})
-  endif()
+    target_include_directories(gammaray_ui SYSTEM PRIVATE ${Qt5Widgets_PRIVATE_INCLUDE_DIRS})
 else(HAVE_PRIVATE_QT_HEADERS)
   add_feature_info("QHeaderView geometry/state restoration" HAVE_PRIVATE_QT_HEADERS
     "You must have a build version of Qt available. Make sure the qmake found first in your execute comes from this build version."
@@ -118,6 +114,7 @@ set(gammaray_ui_internal_srcs
 
 add_library(gammaray_ui_internal STATIC ${gammaray_ui_internal_srcs})
 set_target_properties(gammaray_ui_internal PROPERTIES POSITION_INDEPENDENT_CODE ON)
+target_include_directories(gammaray_ui_internal SYSTEM PRIVATE ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
 target_link_libraries(gammaray_ui_internal
   ${QT_QTCORE_LIBRARIES}
   ${QT_QTGUI_LIBRARIES}
