Update to changes in craft

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -1,3 +1,6 @@
+## The cash used was created by the command
+## Craftmaster.py --config appveyor.ini --variables Ignores= CreateCache=True UseCache=False Msys=D:\msys -c --install-deps gammaray charm
+
 # Avalible variables are
 # Variables:Root: Root is defined relative to CraftMaster and points to the subdirectory work
 [General]
@@ -24,9 +27,11 @@ Msys = C:\msys64\
 Paths/python = C:\Python36
 Paths/python27 = C:\Python27
 Paths/Msys = ${Variables:Msys}
+Paths/DownloadDir = ${Variables:Root}/downloads
 ShortPath/emerge_use_short_path = False
 Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
+Packager/CacheDir = ${Variables:Root}/cache
 Packager/RepositoryUrl = http://downloads.kdab.com/kde-emerge/
 Packager/PackageType = PortablePackager
 Compile/BuildType = Release
@@ -39,22 +44,20 @@ QtSDK/Enabled=True
 QtSDK/PackageQtSDK=False
 Portage/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus
 CraftDebug/DumpSettings=True
-PortageVersions/kf5 = 5.34.0
+PortageVersions/kf5 = 5.36.0
 PortageVersions/KDEApplications = 17.04.2
 PortageVersions/qt-apps/gammaray=master
+PortageVersions/qt-apps/charm=master
 
 
 [msvc2015x86]
 QtSDK/Compiler = msvc2015
-General/KDECompiler = msvc2015
-General/Architecture = x86
+General/ABI = windows-msvc2015_32-cl
 
 [msvc2015x64]
 QtSDK/Compiler = msvc2015_64
-General/KDECompiler = msvc2015
-General/Architecture = x64
-
+General/ABI = windows-msvc2015_64-cl
 [mingw]
 QtSDK/Compiler = mingw53_32
-General/KDECompiler = mingw4
-General/Architecture = x86
+General/ABI = windows-mingw_32-gcc
+
