Tests for picking

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -345,6 +345,13 @@ if(Qt5Core_FOUND AND NOT Qt5Core_VERSION_MINOR LESS 4) # requires QHooks
         )
         target_link_libraries(quickinspectortest gammaray_core gammaray_quickinspector_shared Qt5::Quick)
 
+        gammaray_add_probe_test(quickinspectorpickingtest
+            quickinspectorpickingtest.cpp
+            quickinspectortest.qrc
+            $<TARGET_OBJECTS:modeltestobj>
+            )
+        target_link_libraries(quickinspectorpickingtest gammaray_core Qt5::Test Qt5::Quick)
+
         gammaray_add_probe_test(quickinspectorbench
             quickinspectorbench.cpp
             ../plugins/quickinspector/quickitemmodel.cpp
