Add clear history button
This clear out free timers and reset other timers.

--- a/plugins/timertop/CMakeLists.txt
+++ b/plugins/timertop/CMakeLists.txt
@@ -3,6 +3,7 @@ if(BUILD_TIMER_PLUGIN)
 
 set(gammaray_timertop_plugin_srcs
   timertop.cpp
+  timertopinterface.cpp
   timermodel.cpp
   timerinfo.cpp
   functioncalltimer.cpp
@@ -33,6 +34,8 @@ if(GAMMARAY_BUILD_UI)
 
   set(gammaray_timertop_plugin_ui_srcs
     timertopwidget.cpp
+    timertopinterface.cpp
+    timertopclient.cpp
   )
 
   gammaray_add_plugin(gammaray_timertop_ui_plugin
