Disable building of tests

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -36,6 +36,7 @@ Packager/RepositoryUrl = http://downloads.kdab.com/kde-emerge/
 Compile/BuildType = Release
 #we need https://github.com/ninja-build/ninja/pull/1181/ so ninja > v1.7.2
 Compile/UseNinja = False
+Compile/BuildTests = False
 ContinuousIntegration/Enabled=True
 QtSDK/Version=5.9.1
 QtSDK/Path=C:\Qt
