Use a probe only build for most configurations

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -49,15 +49,16 @@ PortageVersions/KDEApplications = 17.04.2
 PortageVersions/qt-apps/gammaray=master
 PortageVersions/qt-apps/charm=master
 
-
 [msvc2015x86]
 QtSDK/Compiler = msvc2015
 General/ABI = windows-msvc2015_32-cl
+General/Options = dynamic.gammarayProbeOnly=True
 
-[msvc2015x64]
-QtSDK/Compiler = msvc2015_64
-General/ABI = windows-msvc2015_64-cl
 [mingw]
 QtSDK/Compiler = mingw53_32
 General/ABI = windows-mingw_32-gcc
+General/Options = dynamic.gammarayProbeOnly=True
 
+[msvc2017x64]
+QtSDK/Compiler = msvc2017_64
+General/ABI = windows-msvc2017_64-cl
