Make sure the BUILD_TESTING option is actually defined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ include(CheckLibraryExists)
 include(CheckSymbolExists)
 include(CMakeParseArguments)
 include(CMakePushCheckState)
+include(CTest)
 include(GammaRayMacros)
 include(GammaRayMacrosInternal)
 include(FeatureSummary)
