--- a/appveyor.ini
+++ b/appveyor.ini
@@ -34,15 +34,14 @@ Packager/CreateCache = ${Variables:CreateCache}
 Packager/CacheDir = ${Variables:Root}/cache
 Packager/RepositoryUrl = http://downloads.kdab.com/kde-emerge/
 Compile/BuildType = Release
-#we need https://github.com/ninja-build/ninja/pull/1181/ so ninja > v1.7.2
-Compile/UseNinja = False
 Compile/BuildTests = False
 ContinuousIntegration/Enabled=True
 QtSDK/Version=5.9.1
 QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
 QtSDK/PackageQtSDK=False
-Portage/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus
+# the ignores also include packages only needed for the client build
+Portage/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus;win32libs/openssl;frameworks/tier1/syntax-highlighting;qt-apps/kdstatemachineeditor;dev-util/nsis
 CraftDebug/DumpSettings=True
 PortageVersions/kf5 = 5.36.0
 PortageVersions/KDEApplications = 17.04.2
@@ -62,3 +61,5 @@ General/Options = dynamic.gammarayProbeOnly=True
 [msvc2015x64]
 QtSDK/Compiler = msvc2015_64
 General/ABI = windows-msvc2015_64-cl
+# we need openssl etc for the client build, so don't ignore it
+Portage/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus
