QuickInspector: Reveal wasted memory in textures and texture-atlases
* Optional Decoration in texture tab
* Shown only when more than 30% are wasted
* Visualizes wasted space
* Quantifies waste-to-texture-ratio

--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -58,7 +58,8 @@ if(Qt5Quick_FOUND)
       geometryextension/sgwireframewidget.cpp
       textureextension/texturetab.cpp
       textureextension/textureviewwidget.cpp
-    )
+      textureextension/resources.qrc
+      )
 
     gammaray_add_plugin(gammaray_quickinspector_ui
       JSON gammaray_quickinspector.json
