Update application/executable icons
Task-Id: KDEND-214

--- a/ui/resources/CMakeLists.txt
+++ b/ui/resources/CMakeLists.txt
@@ -1,32 +1,28 @@
+# See https://standards.freedesktop.org/icon-theme-spec/icon-theme-spec-latest.html
+
 if(UNIX AND NOT APPLE AND GAMMARAY_BUILD_UI)
-  install(
-    FILES gammaray/GammaRay-16x16.png
-    DESTINATION "${ICON_INSTALL_DIR}/hicolor/16x16/apps" RENAME GammaRay.png
-  )
-  install(
-    FILES gammaray/GammaRay-32x32.png
-    DESTINATION "${ICON_INSTALL_DIR}/hicolor/32x32/apps" RENAME GammaRay.png
-  )
-  install(
-    FILES gammaray/GammaRay-48x48.png
-    DESTINATION "${ICON_INSTALL_DIR}/hicolor/48x48/apps" RENAME GammaRay.png
-  )
-  install(
-    FILES gammaray/GammaRay-128x128.png
-    DESTINATION "${ICON_INSTALL_DIR}/hicolor/128x128/apps" RENAME GammaRay.png
-  )
-  install(
-    FILES gammaray/GammaRay-256x256.png
-    DESTINATION "${ICON_INSTALL_DIR}/hicolor/256x256/apps" RENAME GammaRay.png
-  )
-  install(
-    FILES gammaray/GammaRay-512x512.png
-    DESTINATION "${ICON_INSTALL_DIR}/hicolor/512x512/apps" RENAME GammaRay.png
-  )
+    foreach(size 16 24 32 48 64 128 256 512)
+        foreach(scale 1 2 3)
+            set(scaled_size ${size}x${size})
+
+            if(${scale} GREATER 1)
+                set(scaled_size ${size}x${size}@${scale})
+            endif()
+
+            set(source gammaray/GammaRay-${scaled_size}x.png)
+
+            if(EXISTS ${source})
+                install(
+                    FILES ${source}
+                    DESTINATION "${ICON_INSTALL_DIR}/hicolor/${scaled_size}/apps" RENAME GammaRay.png
+                    )
+            endif()
+        endforeach(scale)
+    endforeach(size)
 endif()
 
 if(APPLE)
-  if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
-    install(FILES gammaray/GammaRay.icns DESTINATION "${RESOURCES_INSTALL_DIR}")
-  endif()
+    if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
+        install(FILES gammaray/GammaRay.icns DESTINATION "${RESOURCES_INSTALL_DIR}")
+    endif()
 endif()
