Introduce ThemedImageLabel widget
This is a image label that can update itself when the widget
change in a way that it affect the rendering of the image (choosing
the correct image depending the device pixel ratio, reloading the
correct image when the widget has changed screen etc).

Task-Id: KDEND-214

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -3,6 +3,7 @@
 #
 set(gammaray_ui_srcs
   aboutdata.cpp
+  themedimagelabel.cpp
   clientdecorationidentityproxymodel.cpp
   clienttoolmanager.cpp
   clienttoolmodel.cpp
