Fix craft config

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -6,6 +6,7 @@
 [General]
 Branch = master
 ShallowClone = True
+Command = craft
 
 # Variables defined here override the default value
 # The variable names are casesensitive
@@ -40,12 +41,13 @@ QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
 QtSDK/PackageQtSDK=False
 # the ignores also include packages only needed for the client build
-Portage/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus;win32libs/openssl;frameworks/tier1/syntax-highlighting;qt-apps/kdstatemachineeditor;dev-util/nsis
+Blueprints/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus;win32libs/openssl;frameworks/tier1/syntax-highlighting;qt-apps/kdstatemachineeditor;dev-util/nsis
+Blueprints/BlueprintRoot = ${Variables:Root}/blueprints
 CraftDebug/DumpSettings=True
-PortageVersions/kf5 = 5.36.0
-PortageVersions/KDEApplications = 17.04.2
-PortageVersions/qt-apps/gammaray=master
-PortageVersions/qt-apps/charm=master
+BlueprintVersions/kf5 = 5.36.0
+BlueprintVersions/KDEApplications = 17.04.2
+BlueprintVersions/qt-apps/gammaray=master
+BlueprintVersions/qt-apps/charm=master
 
 [msvc2015x86]
 QtSDK/Compiler = msvc2015
@@ -61,4 +63,4 @@ General/Options = dynamic.gammarayProbeOnly=True
 QtSDK/Compiler = msvc2015_64
 General/ABI = windows-msvc2015_64-cl
 # we need openssl etc for the client build, so don't ignore it
-Portage/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus
+Blueprints/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus
